gitops/provisioning/ns/network-policy.yaml
# Deny traffic from other namespaces while allowing all traffic from the pods in the same namespace.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-other-namespaces
spec:
  podSelector: null
  ingress:
    - from:
        - podSelector: {}
---
# Allow external service from public Internet directly or through a Load Balancer to access web tier pods.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-allow-external
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
    - {}
